--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@Dvalkyrie 
+Dvalkyrie
+/
+2022YuriJam
+Public
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+Settings
+2022YuriJam/.gitignore
+@Dvalkyrie
+Dvalkyrie Initial commit
+Latest commit 0ac1e49 21 days ago
+ History
+ 1 contributor
+60 lines (49 sloc)  1020 Bytes
+
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
@@ -58,3 +87,18 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Footer
+© 2022 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+2022YuriJam/.gitignore at main · Dvalkyrie/2022YuriJam
