--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+2202_YuriJamBase/UserSettings/Layouts/default-2021.dwlt
+2202_YuriJamBase/UserSettings/EditorUserSettings.asset
