scene transition fix

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ sysinfo.txt
 crashlytics-build.properties
 2202_YuriJamBase/UserSettings/Layouts/default-2021.dwlt
 2202_YuriJamBase/UserSettings/EditorUserSettings.asset
+2202_YuriJamBase/UserSettings/EditorUserSettings.asset
